multi-cluster/kind/metallb-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metallb-controller
  namespace: metallb-system
spec:
  selector:
    matchLabels:
      app: metallb
      component: controller
  template:
    metadata:
      labels:
        app: metallb
        component: controller
    spec:
      serviceAccountName: metallb-controller
      containers:
      - name: controller
        image: metallb/controller:v0.12.1
        args:
        - --port=7472
        - --config=config
        ports:
        - containerPort: 7472
          protocol: TCP
          name: webhook-server
        - containerPort: 9443
          protocol: TCP
          name: webhook-tls
        volumeMounts:
        - name: config
          mountPath: /etc/mlb
        livenessProbe:
          httpGet:
            path: /metrics
            port: 7472
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /metrics
            port: 7472
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
      volumes:
      - name: config
        configMap:
          name: metallb-config
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: metallb-speaker
  namespace: metallb-system
spec:
  selector:
    matchLabels:
      app: metallb
      component: speaker
  template:
    metadata:
      labels:
        app: metallb
        component: speaker
    spec:
      serviceAccountName: metallb-speaker
      hostNetwork: true
      containers:
      - name: speaker
        image: metallb/speaker:v0.12.1
        args:
        - --port=7472
        - --config=config
        ports:
        - containerPort: 7472
          protocol: TCP
          name: webhook-server
        - containerPort: 7946
          protocol: UDP
          name: memberlist-tcp
        - containerPort: 7946
          protocol: TCP
          name: memberlist-udp
        volumeMounts:
        - name: config
          mountPath: /etc/mlb
        livenessProbe:
          httpGet:
            path: /metrics
            port: 7472
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /metrics
            port: 7472
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_RAW
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
      volumes:
      - name: config
        configMap:
          name: metallb-config
